Fixed layout issues Linsenpate

--- a/css/styles_lp.css
+++ b/css/styles_lp.css
@@ -25,14 +25,11 @@ Grey bg: #F8F8F8;
 .lp-intro-left{
     flex-grow: 3;     
     flex-basis: 45%;
-    min-width: 320px;
-    padding-right: 5%;
  }
 
 .lp-intro-right{
     flex-grow: 1;
     flex-basis: 55%;
-    min-width: 320px;
 }
 
 .project-cta {
@@ -42,7 +39,7 @@ Grey bg: #F8F8F8;
     flex-flow: row wrap;
     justify-content: space-between;
     align-items: center;
-    max-width: 444px;
+    max-width: 450px;
 }
 .project-cta .btn{
     max-width: 210px;
@@ -62,6 +59,7 @@ Grey bg: #F8F8F8;
     background-color: #F8F8F8;
 }
 
+
 .table-flex-grid{
     margin-top: 5%;
     display: flex;
@@ -73,7 +71,7 @@ Grey bg: #F8F8F8;
 }
 
 .table-item{
-    width:275px;
+    max-width: 275px;
     display: flex;
     align-items: flex-start;
 }
@@ -88,7 +86,7 @@ li{
     font-weight: 700;
     font-family: Montserrat, Arial, Helvetica, sans-serif;
     color: #0C0093;
-    margin-right: 20px;
+    padding-right: 20px;
     line-height: 50px;
 }
 
@@ -120,14 +118,14 @@ li p{
 .prj-left-col{
     flex-grow: 3;     
     flex-basis: 45%;
-    min-width: 320px;
+    min-width: 300px;
     padding-right: 5%;
 }
 
 .prj-right-col{
     flex-grow: 1;
     flex-basis: 55%;
-    min-width: 320px;
+    min-width: 300px;
 }
 
 .prj-left-col-2{
@@ -168,6 +166,7 @@ li p{
     flex-flow: row wrap;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
 .mockup1{
     flex: 0 1 25%;
@@ -199,7 +198,6 @@ li p{
     flex: 1 1 50%;
     min-width: 320px;
 }
-
 
 /********* Design System **********/
 
@@ -438,24 +436,6 @@ li p{
 Small devices // Smaller than iPad (768px and smaller)
 ================================= */
 @media only screen and (max-width: 768px) {
-    h1{
-        font-size: 1.875rem;
-        line-height: 42px;
-    }
-
-    .top-nav{
-        display: none;
-    }
-
-    .hero-pic {
-        display: none;
-    }
-
-    .hero-cta{
-        margin-top: 35%;
-        margin-bottom: 35%;
-    }
-    
     .work-wrapper h3, .container-about h3, .container-contact h3, #contact h3, .slides-wrapper h3, #recommendation h3 {
         padding-top:10%;
         padding-bottom: 6%;
@@ -466,6 +446,15 @@ Small devices // Smaller than iPad (768px and smaller)
         line-height: 28px;
     }
 
+    #challenge{
+        min-width: 320px;
+        width: 100%;
+    }
+
+    .container-challenge{
+        width: 100%;
+    }
+
     p.label-role{
         font-size: 0.85rem;
     }
@@ -474,22 +463,58 @@ Small devices // Smaller than iPad (768px and smaller)
         margin-left: 2%;
         margin-right: 2%;
     }
-}
 
+    #lp-intro{
+        margin-top: 20%;
+        margin-bottom: 10%;
+    }
+    
+    .prj-left-col-2-left{
+        margin-right: 0;
+    }
+
+    .mockup{
+        min-width: 200px;
+    }
+
+    .prj-right-col, .prj-left-col{
+    width: 100%;
+    padding-right: 5%;
+    }
+
+    .prj-left-col-2-left{
+        padding-right: 20%;
+    }
+
+    #prj-description{
+        margin-top:3rem;
+    }
+
+    .typo-flex-grid{
+        padding-bottom: 5%;
+        padding-right: 2%;
+        }
+
+    .typo{
+        padding-right: 0em;
+    }
+
+    .table-item{
+        max-width: 250px;
+        }
+
+    .nr{
+    font-size: 40px;
+}
+}
 /*********** Media Queries **********/
 
 /* ==============================
 Small devices // Smaller than iPad (768px and smaller)
 ================================= */
 @media only screen and (max-width: 768px) {
-    .lp-intro-left {
-        text-align: center;
-    }
 
-    .project-cta{
-        justify-content: center;
-    }
-}
+}   
 
 /* ==============================
 Large devices (1024px or larger)
